# billy

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  config.env  config_sample.py  config_sample.yml  cron_boot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  update.py
api/: main.py
api/routes/: __init__.py  files.py  status.py  tasks.py  tasks_extended.py  webhooks.py
bot/helper/: common.py
bot/modules/: __init__.py  imdb.py  mirror_leech.py  plugin_manager.py  speedtest.py  uphoster.py  users_settings.py  ytdlp.py
bots/: __init__.py  api.py  base.py  clients.py
bots/clients/: __init__.py
config/: __init__.py  _base.py  telegram.py
core/: __init__.py  bin_config.py  events.py  exceptions.py  executor.py  listeners.py  pipeline.py  plugin_loader.py  registry.py  state.py  status_utils.py  task.py  task_config.py
core/helpers/: __init__.py  bypass.py  links_utils.py  sudo.py
core/queue/: __init__.py  priority_queue.py  queue_manager.py
core/worker/: __init__.py  pool.py  worker.py
db/: __init__.py  base.py  mongodb.py
gen_scripts/: README.md
gen_scripts/add_to_team_drive/: README.md  script.py
gen_scripts/driveid/: README.md  script.py
gen_scripts/gen_pyro_session/: README.md  script.py
gen_scripts/gen_sa_accounts/: README.md  script.py
gen_scripts/gen_token_pickle/: README.md  script.py
plugins/: __init__.py  base.py  loader.py
plugins/downloader/: __init__.py  aria2.py  jd.py  (+9 more)
tests/: conftest.py  test_integration.py  test_phase1.py  test_phase2_api.py  test_phase5.py
web/: wserver.py
(+51 files in other folders)
