[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project]
name = "wzml-x"
version = "4.0.0"
description = "Scalable file processing platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pyrotgfork>=2.0.0",
    "pygments>=2.17.0",
    "filetype>=1.2.0",
    "tqdm>=4.66.0",
    "pillow>=10.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
wzml = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"